# splash

./: CMakeLists.txt  README.md
GDL/: metric_tests.pro  splash.pro
samples/: 2004-data1_regtv21.fits  2004true70+3+7.fits  2004true70-8+5.fits  2004true70.fits  example.txt  stellar-surface_ref-img.fits
src/: CMakeLists.txt  Makefile  core.cpp  core.h  fitsregistration.cpp  iqi.cpp  iqi.h  mse.cpp  mse.h  msssim.cpp  msssim.h  psnr.cpp  psnr.h  similarityMetric.h  ssim.cpp  ssim.h
test/: CMakeLists.txt  TestMSE.cpp  main.cpp
